--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
+        "acorn": "6.4.1",
         "bootstrap": "^4.4.1",
         "jquery": "^3.4.1",
+        "minimist": "1.2.3",
         "popper.js": "^1.16.1"
     }
 }
