--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
         "@fortawesome/fontawesome-free": "^5.13.0",
         "acorn": "6.4.1",
         "bootstrap": "^4.4.1",
-        "jquery": "^3.4.1",
+        "jQuery": "^1.7.4",
+        "jquery": "^3.5.0",
+        "jsdom": "^16.2.2",
+        "location": "0.0.1",
         "minimist": "1.2.3",
-        "popper.js": "^1.16.1"
+        "navigator": "^1.0.1",
+        "popper.js": "^1.16.1",
+        "xmlhttprequest": "^1.8.0"
     }
 }
