--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,11 +34,12 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/livre/, roles: ROLE_BIBLIOTHECAIRE }
-        - { path: ^/(abonne|emprunt)/, roles: ROLE_ADMIN }
+        - { path: (ajouter|modifier)$, roles: ROLE_BIBLIOTHECAIRE }
+        - { path: supprimer$, roles: ROLE_ADMIN }
         - { path: ^/test, roles: ROLE_DEV }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/profil, roles: ROLE_USER }
     
     role_hierarchy:
-        ROLE_ADMIN: ROLE_USER, ROLE_BIBLIOTHECAIRE
-        ROLE_DEV: ROLE_ADMIN
+        # ROLE_BIBLIOTHECAIRE: ROLE_USER
+        ROLE_ADMIN: ROLE_BIBLIOTHECAIRE
+        ROLE_DEV: ROLE_ADMIN, ROLE_USER
