--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/fontawesome-free": "^5.13.0",
         "acorn": "6.4.1",
         "bootstrap": "^4.4.1",
+        "browserslist": "^4.14.7",
         "jquery": "^3.5.0",
         "jsdom": "^16.2.2",
         "location": "0.0.1",
