--- a/package.json
+++ b/package.json
@@ -20,12 +20,21 @@
         "acorn": "6.4.1",
         "bootstrap": "^4.4.1",
         "browserslist": "^4.14.7",
+        "elliptic": "6.5.3",
+        "http-proxy": "1.18.1",
+        "ini": "1.3.6",
         "jquery": "^3.5.0",
         "jsdom": "^16.2.2",
         "location": "0.0.1",
+        "lodash": "4.17.19",
         "minimist": "1.2.3",
         "navigator": "^1.0.1",
+        "node-forge": "0.10.0",
+        "node-notifier": "8.0.1",
+        "object-path": "0.11.5",
         "popper.js": "^1.16.1",
+        "serialize-javascript": "3.1.0",
+        "websocket-extensions": "0.1.4",
         "xmlhttprequest": "^1.8.0"
     }
 }
